<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context="com.tencent.wmpf.pos.activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@color/theme_color"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init_title"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/user_red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_step"
                android:lineSpacingExtra="2dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="60dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@mipmap/tools_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_step"
                android:lineSpacingExtra="2dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:lines="1"
        android:inputType="text"
        android:background="@drawable/edt_bg"
        android:layout_marginTop="70dp"
        android:hint="请输入用户号"
        android:textColorHint="@color/text_color_hint"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:lines="1"
        android:inputType="textPassword"
        android:background="@drawable/edt_bg"
        android:hint="请输入密码"
        android:textColorHint="@color/text_color_hint"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:enabled="false"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"/>
</LinearLayout>
